Add new endpoints and CORS
